--- a/contacto.html
+++ b/contacto.html
@@ -21,7 +21,7 @@
     <link rel="manifest" href="/site.webmanifest">
 
     <!-- CSS -->
-    <link rel="stylesheet" type="text/css" href="css/contacto.css">
+    <link rel="stylesheet" type="text/css" href="css/styles.css">
 
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
@@ -34,18 +34,18 @@
 
     <!-- Navbar -->
     <header class="main-header">
-        <nav class="navbar flex">
-            <div class="logo">
-                <a href="./"><img src="./img/logo.svg" alt="logo de MEPC"></a>
+        <nav class="navbar">
+            <div class="nav-logo">
+                <a href="./"><img src="./img/logo.svg" alt="Logo de MEPC"></a>
             </div>
             <ul class="nav-ul">
-                <li><a href="./">¿Quiénes somos?</a></li>
-                <li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
-                <li><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
-                <li><a href="./documentos.html">Documentos</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
+                <li class="main-navbar link active"><a href="./">¿Quiénes somos?</a></li>
+                <li class="link"><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
+                <li class="link"><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
+                <li class="link"><a href="./documentos.html">Documentos</a></li>
+                <li class="link"><a href="./contacto.html">Contacto</a></li>
             </ul>
-            <div class="button">
+            <div class="nav-btn">
                 <div class="line-1"></div>
                 <div class="line-2"></div>
                 <div class="line-3"></div>
@@ -54,44 +54,43 @@
     </header>
 
     <section class="titles">
-        <!-- Title -->
-        <div class="title">
-            <h1>Contacto</h1> 
-        </div>
+        <h1>¿Cómo colaborar?</h1> 
         <hr>
     </section>
 
     <!-- Contact -->
-    <form class="form-wrapper" name="contact" method="POST" action="https://formspree.io/f/mleadzdo">
-        <div class="form-group">
-          <label class="sr-only" for="inputName">Nombre</label>
-          <input type="text" name="name" class="form-control" id="inputName" placeholder="Nombre" required="">
+    <section class="section-form">
+        <div class="form">
+            <form class="form-wrapper" name="contact" method="POST" action="https://formspree.io/f/mleadzdo">
+                <div class="form-group">
+                    <label class="sr-only" for="inputName">Nombre</label>
+                    <input type="text" name="name" class="form-control" id="inputName" placeholder="Nombre" required="">
+                </div>
+                <div class="form-group">
+                    <label class="sr-only" for="inputEmail">Email</label>
+                    <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email" required="">
+                </div>
+                <div class="form-group">
+                    <label class="sr-only" for="inputMessage">Mensaje</label>
+                    <textarea name="message" class="form-control" id="inputMessage" rows="5" placeholder="Mensaje" required=""></textarea>
+                </div>
+                <button type="submit" class="btn">Enviar</button>
+            </form>
         </div>
-        <div class="form-group">
-          <label class="sr-only" for="inputEmail">Email</label>
-          <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email" required="">
-        </div>
-        <div class="form-group">
-          <label class="sr-only" for="inputMessage">Mensaje</label>
-          <textarea name="message" class="form-control" id="inputMessage" rows="5" placeholder="Mensaje" required=""></textarea>
-        </div>
-        <button type="submit" class="btn">Enviar</button>
-    </form>
+    </section>
 
     <!-- Footer -->
     <footer class="site-footer">
-        <div class="copyright">
-            <p>MEPC © 2021</p>
-            <p class="developed-by">Desarrollado con 💚 y <a href="https://github.com/francosbenitez/mepc" target="_blank" rel="noopener"><i class="fas fa-code-branch"></i></a> por <a href="https://francosbenitez.github.io" target="_blank" rel="noopener">Franco Sebastián Benítez</a>
+        <p>MEPC © 2021</p>
+        <p>Desarrollado con ☕️ y <a href="https://github.com/francosbenitez/mepc" target="_blank" rel="noopener">
+            <i class="fas fa-code-branch"></i></a> por <a href="https://francosbenitez.github.io" target="_blank" rel="noopener">
+                Franco Sebastián Benítez</a>
             <span class="float-right" aria-hidden="true">
-            <a href="#" class="back-to-top">
-                <span class="button-icon">
+                <a href="#" class="back-to-top">
                     <i class="fas fa-chevron-up fa-2x"></i>
-                </span>
-            </a>
-            </p>
+                </a>
             </span>
-        </div>
+        </p>
     </footer>
     
     <!-- JavaScript -->
