--- a/contacto.html
+++ b/contacto.html
@@ -73,7 +73,7 @@
                     <label class="sr-only" for="inputMessage">Mensaje</label>
                     <textarea name="message" class="form-control" id="inputMessage" rows="5" placeholder="Mensaje" required=""></textarea>
                 </div>
-                <button type="submit" class="btn">Enviar</button>
+                <button type="submit" class="submit-btn">Enviar</button>
             </form>
         </div>
     </section>
