--- a/contacto.html
+++ b/contacto.html
@@ -55,7 +55,7 @@
 
     <!-- Contact -->
     <section class="titles">
-        <h1>¿Cómo colaborar?</h1> 
+        <h1>Contacto</h1> 
         <hr>
     </section>
     <section class="section-form">
