--- a/documentos.html
+++ b/documentos.html
@@ -37,7 +37,7 @@
             <div class="nav-logo">
                 <a href="./"><img src="./img/logo.svg" alt="Logo de MEPC"></a>
             </div>
-            <ul class="nav-ul">
+            <ul class="nav-ul" id="nav">
                 <li class="main-navbar link active"><a href="./">¿Quiénes somos?</a></li>
                 <li class="link"><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
                 <li class="link"><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
