add links to como-colaborar.html!

--- a/como-colaborar.html
+++ b/como-colaborar.html
@@ -63,18 +63,22 @@
             <i class="feature-icon"><img src="./img/corre-la-voz.png" alt="Logo de Corré la voz"></i>
             <h1 class="feature-title">Corré la voz</h1>
             <p class="feature-description">Una mejor educación es para todos. Ayudanos a correr la voz siguiéndonos y compartiendo 
-                nuestros contenidos en Twitter, YouTube, Facebook, Instagram y otras redes sociales.</p>
+                nuestros contenidos en <a href="https://twitter.com/MEPC_oficial">Twitter</a>, 
+                <a href="https://www.youtube.com/channel/UCJpN1ANkID-67MQ2alMek-g">YouTube</a>, 
+                <a href="https://www.facebook.com/mepc.oficial/">Facebook</a>, 
+                <a href="https://www.instagram.com/mepc.oficial/">Instagram</a> y otras redes sociales.</p>
         </div>
         <div class="feature">
             <i class="feature-icon"><img src="./img/equipo.png" alt="Logo de Unite a nuestro equipo"></i>
             <h1 class="feature-title">Unite a nuestro equipo</h1>
             <p class="feature-description">Podés unirte a nuestros departamentos enviándonos un mail. 
-                También podés colaborar con el sitio web a través de GitHub.</p>
+                También podés colaborar con el sitio web a través de <a href="https://github.com/francosbenitez/mepc">Github</a>.</p>
         </div>
         <div class="feature">
             <i class="feature-icon"><img src="./img/grupos-de-estudio.png" alt="Logo de Unite a nuestros grupos de estudio"></i>
             <h1 class="feature-title">Unite a nuestros grupos de estudio</h1>
-            <p class="feature-description">Contamos con nueve grupos de estudio sobre diferentes temas relacionados a la psicología científica. 
+            <p class="feature-description">Contamos con <a href="./que-estudiamos.html">nueve grupos de estudio</a>
+                 sobre diferentes temas relacionados a la psicología científica. 
                 ¡Sumándote a ellos podremos compartir y aprender en conjunto!</p>
         </div>
     </section>
@@ -82,13 +86,15 @@
         <div class="feature">
             <i class="feature-icon fab fa-whatsapp fa-2x"></i>
             <h1 class="feature-title">Unite a nuestros grupos de WhatsApp</h1>
-            <p class="feature-description">Contamos con dos grupos de WhatsApp (grupo 1 y grupo 2) 
+            <p class="feature-description">Contamos con dos grupos de WhatsApp (<a href="https://chat.whatsapp.com/LXTB9dRdP2z0d8meLKz1eg">grupo 1</a> 
+                y <a href="https://chat.whatsapp.com/LWqNQwz5UxhJIJwrArgJ3E">grupo 2</a>) 
                 para mantenernos actualizados sobre novedades en psicología científica.</>
         </div>
         <div class="feature">
             <i class="feature-icon fab fa-facebook fa-2x"></i>
             <h1 class="feature-title">Unite a nuestro grupo de Facebook</h1>
-            <p class="feature-description">Contamos con un grupo de Facebook con más de 3000 miembros 
+            <p class="feature-description">Contamos con un <a href="https://www.facebook.com/groups/2641583789449049">grupo de Facebook</a>
+                 con más de 3000 miembros 
                 entusiastas de la psicología científica.</p>
         </div>
     </section>
