--- a/contacto.html
+++ b/contacto.html
@@ -57,6 +57,7 @@
     <section class="titles">
         <h1>Contacto</h1> 
         <hr>
+        <p>¡Si tenés alguna consulta o querés saber más del Movimiento, envianos un mensaje!</p>
     </section>
     <section class="section-form">
         <div class="form">
