--- a/contacto.html
+++ b/contacto.html
@@ -57,7 +57,9 @@
     <section class="titles">
         <h1>Contacto</h1> 
         <hr>
-        <p>¡Si tenés alguna consulta o querés saber más del Movimiento, envianos un mensaje!</p>
+        <div>
+            ¡Si tenés alguna consulta o querés saber más del Movimiento, envianos un mensaje!
+        </div>
     </section>
     <section class="section-form">
         <div class="form">
