--- a/contacto.html
+++ b/contacto.html
@@ -77,6 +77,9 @@
                     <textarea name="message" class="form-control" id="inputMessage" rows="5" placeholder="Mensaje" required=""></textarea>
                 </div>
                 <button type="submit" class="submit-btn">Enviar</button>
+                <div class="form-image">
+                    <img src="./img/contacto.png" alt="Ilustración">
+                </div>
             </form>
         </div>
     </section>
