--- a/como-colaborar.html
+++ b/como-colaborar.html
@@ -62,7 +62,7 @@
         <div class="feature">
             <i class="feature-icon"><img src="./img/corre-la-voz.png" alt="Logo de Corré la voz"></i>
             <h2 class="feature-title">Corré la voz</h2>
-            <p class="feature-description">Una mejor educación es para todos. Ayudanos a correr la voz siguiéndonos y compartiendo 
+            <p class="feature-description">Una mejor educación es para todes. Ayudanos a correr la voz siguiéndonos y compartiendo 
                 nuestros contenidos en <a href="https://twitter.com/MEPC_oficial">Twitter</a>, 
                 <a href="https://www.youtube.com/channel/UCJpN1ANkID-67MQ2alMek-g">YouTube</a>, 
                 <a href="https://www.facebook.com/mepc.oficial/">Facebook</a>, 
