--- a/como-colaborar.html
+++ b/como-colaborar.html
@@ -62,7 +62,7 @@
         <div class="feature">
             <i class="feature-icon"><img src="./img/equipo.png" alt="Logo de Unite a nuestro equipo"></i>
             <h2 class="feature-title">Unite a nuestro equipo</h2>
-            <p class="feature-description">Podés unirte a nuestros departamentos enviándonos un mail. 
+            <p class="feature-description">Podés unirte a nuestros departamentos <a href="./contacto.html">enviándonos un mail</a>. 
                 También podés colaborar con el sitio web a través de <a href="https://github.com/francosbenitez/mepc">Github</a>.</p>
         </div>
         <div class="feature">
