--- a/contacto.html
+++ b/contacto.html
@@ -57,7 +57,7 @@
     <section class="titles">
         <h1>Contacto</h1> 
         <hr>
-        <div>
+        <div class="alert-note">
             ¡Si tenés alguna consulta o querés saber más del Movimiento, envianos un mensaje!
         </div>
     </section>
