remove secondary-nav-logo!

--- a/documentos.html
+++ b/documentos.html
@@ -54,8 +54,7 @@
 
     <!-- Secondary navbar -->
     <nav id="navbar">
-        <div class="secondary-nav-logo">
-            <a href="./"><img src="./img/logo.svg" alt="logo de MEPC"></a>
+        <div class="secondary-nav">
             <header><input type="text" id="search" onkeyup="myFunction()" placeholder="Buscar..."></header>
         </div>
         <div class="ul-container">
