add awesome icons to contact!

--- a/que-estudiamos.html
+++ b/que-estudiamos.html
@@ -58,7 +58,7 @@
         <section class="titles">
             <h1>¿Qué estudiamos?</h1> 
             <hr>
-            <div class="alert-note">
+            <div class="alert-note-left">
                     Para saber más acerca de los grupos de estudio, pulsá encima de ellos. <br>
                     Si querés participar, sólo tenés que enviar un mail al grupo deseado. En breve te vamos a estar contactando.
             </div>
