add feature-icon animations & gradient to contact

--- a/contacto.html
+++ b/contacto.html
@@ -54,84 +54,87 @@
     </header>
 
     <!-- Contact -->
-    <section class="titles">
-        <h1>Contacto</h1> 
-        <hr>
-        <!-- <div class="alert-note-right">
-            ¡Si tenés alguna consulta o querés saber más del Movimiento, envianos un mensaje!
-        </div>-->
-    </section>
-    <section class="features-section">
-        <div class="feature">
-            <i class="feature-icon fab fa-whatsapp fa-2x"></i>
-            <h2 class="feature-title">WhatsApp</h2>
-            <p class="feature-description">
-                <a href="https://chat.whatsapp.com/LXTB9dRdP2z0d8meLKz1eg">Grupo oficial 1</a> 
-                <br>
-                <a href="https://chat.whatsapp.com/LWqNQwz5UxhJIJwrArgJ3E">Grupo oficial 2</a>
-            </p>
-        </div>
-        <div class="feature">
-            <i class="feature-icon fab fa-facebook fa-2x"></i>
-            <h2 class="feature-title">Facebook</h2>
-            <p class="feature-description">
-                <a href="https://www.facebook.com/groups/2641583789449049">Grupo oficial</a>
-                <br>
-                <a href="https://www.facebook.com/mepc.oficial/">Página oficial</a>
-            </p>
-        </div>
-        <div class="feature">
-            <i class="feature-icon fab fa-instagram fa-2x"></i>
-            <h2 class="feature-title">Facebook</h2>
-            <p class="feature-description">
-                <a href="https://www.instagram.com/mepc.oficial/">Cuenta oficial</a>
-            </p>
-        </div>
-    </section>
-    <section class="features-section">
-        <div class="feature">
-            <i class="feature-icon fab fa-youtube fa-2x"></i>
-            <h2 class="feature-title">Youtube</h2>
-            <p class="feature-description">
-                <a href="https://www.youtube.com/channel/UCJpN1ANkID-67MQ2alMek-g">Cuenta oficial</a> 
-            </p>
-        </div>
-        <div class="feature">
-            <i class="feature-icon fas fa-envelope fa-2x"></i>
-            <h2 class="feature-title">Email</h2>
-            <p class="feature-description">
-                <a href="mailto:mepc.org@gmail.com">mepc.org@gmail.com</a>
-            </p>
-        </div>
-        <div class="feature">
-            <i class="feature-icon fab fa-twitter fa-2x"></i>
-            <h2 class="feature-title">Twitter</h2>
-            <p class="feature-description">
-                <a href="https://twitter.com/MEPC_oficial">Cuenta oficial</a>
-            </p>
-        </div>
-    </section>
-    <section class="section-form">
-        <div class="form">
-            <form class="form-wrapper" name="contact" method="POST" action="https://formspree.io/f/mleadzdo">
-                <div class="form-image">
-                    <img src="./img/contacto.png" alt="Ilustración">
-                </div>
-                <div class="form-group">
-                    <label class="sr-only" for="inputName">Nombre</label>
-                    <input type="text" name="name" class="form-control" id="inputName" placeholder="Nombre" required="">
-                </div>
-                <div class="form-group">
-                    <label class="sr-only" for="inputEmail">Email</label>
-                    <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email" required="">
-                </div>
-                <div class="form-group">
-                    <label class="sr-only" for="inputMessage">Mensaje</label>
-                    <textarea name="message" class="form-control" id="inputMessage" rows="5" placeholder="Mensaje" required=""></textarea>
-                </div>
-                <button type="submit" class="submit-btn">Enviar</button>
-            </form>
-        </div>
+    <section class="contact">
+        <section class="titles">
+            <h1>Contacto</h1> 
+            <hr>
+            <!-- <div class="alert-note-right">
+                ¡Si tenés alguna consulta o querés saber más del Movimiento, envianos un mensaje!
+            </div>-->
+        </section>
+        <section class="features-section">
+            <div class="feature">
+                <i class="feature-icon fab fa-whatsapp fa-2x"></i>
+                <h2 class="feature-title">WhatsApp</h2>
+                <p class="feature-description">
+                    <a href="https://chat.whatsapp.com/LXTB9dRdP2z0d8meLKz1eg">Grupo oficial 1</a> 
+                    <br>
+                    <a href="https://chat.whatsapp.com/LWqNQwz5UxhJIJwrArgJ3E">Grupo oficial 2</a>
+                </p>
+            </div>
+            <div class="feature">
+                <i class="feature-icon fab fa-facebook fa-2x"></i>
+                <h2 class="feature-title">Facebook</h2>
+                <p class="feature-description">
+                    <a href="https://www.facebook.com/groups/2641583789449049">Grupo oficial</a>
+                    <br>
+                    <a href="https://www.facebook.com/mepc.oficial/">Página oficial</a>
+                </p>
+            </div>
+            <div class="feature">
+                <i class="feature-icon fab fa-instagram fa-2x"></i>
+                <h2 class="feature-title">Facebook</h2>
+                <p class="feature-description">
+                    <a href="https://www.instagram.com/mepc.oficial/">Cuenta oficial</a>
+                </p>
+            </div>
+        </section>
+        <section class="features-section">
+            <div class="feature">
+                <i class="feature-icon fab fa-youtube fa-2x"></i>
+                <h2 class="feature-title">Youtube</h2>
+                <p class="feature-description">
+                    <a href="https://www.youtube.com/channel/UCJpN1ANkID-67MQ2alMek-g">Cuenta oficial</a> 
+                </p>
+            </div>
+            <div class="feature">
+                <i class="feature-icon fas fa-envelope fa-2x"></i>
+                <h2 class="feature-title">Email</h2>
+                <p class="feature-description">
+                    <a href="mailto:mepc.org@gmail.com">mepc.org@gmail.com</a>
+                </p>
+            </div>
+            <div class="feature">
+                <i class="feature-icon fab fa-twitter fa-2x"></i>
+                <h2 class="feature-title">Twitter</h2>
+                <p class="feature-description">
+                    <a href="https://twitter.com/MEPC_oficial">Cuenta oficial</a>
+                </p>
+            </div>
+        </section>
+        <br>
+        <section class="section-form">
+            <div class="form">
+                <form class="form-wrapper" name="contact" method="POST" action="https://formspree.io/f/mleadzdo">
+                    <div class="form-image">
+                        <img src="./img/contacto.png" alt="Ilustración">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="inputName">Nombre</label>
+                        <input type="text" name="name" class="form-control" id="inputName" placeholder="Nombre" required="">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="inputEmail">Email</label>
+                        <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email" required="">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="inputMessage">Mensaje</label>
+                        <textarea name="message" class="form-control" id="inputMessage" rows="5" placeholder="Mensaje" required=""></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Enviar</button>
+                </form>
+            </div>
+        </section>
     </section>
 
     <!-- Footer -->
