--- a/documentos.html
+++ b/documentos.html
@@ -38,10 +38,10 @@
                 <a href="./"><img src="./img/logo.svg" alt="Logo de MEPC"></a>
             </div>
             <ul class="nav-ul" id="nav">
-                <li class="main-navbar link active"><a href="./">¿Quiénes somos?</a></li>
                 <li class="link"><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
                 <li class="link"><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
                 <li class="link"><a href="./documentos.html">Documentos</a></li>
+                <li class="link"><a href="./recursos.html">Recursos</a></li>
                 <li class="link"><a href="./contacto.html">Contacto</a></li>
             </ul>
             <div class="nav-btn">
