improve resources css

--- a/recursos.html
+++ b/recursos.html
@@ -137,6 +137,7 @@
                                 Formación de grado en psicología en argentina.
                                 Período 2009-2015
                             </div>
+                            <hr>
                             <div class="resource-card-description">
                                 A la fecha no se cuenta con datos descriptivos y 
                                 comparativos actualizados sobre el estado de las carreras de psicología en …
@@ -148,8 +149,10 @@
                     <a href="https://drive.google.com/file/d/1W_iHIjU1QnXo6vjTUxyPiI3Ty9LAzPuq/view?fbclid=IwAR17wVreWiZylutZZwN4vK64_5cuQoscURQF0jdrGCtJx4OgmpvGtuIAGrc" target="_blank">
                         <div class="resource-card-texts">
                             <div class="resource-card-name">Guía de materias y prácticas recomendadas</div>
+                            <hr>
                             <div class="resource-card-description">El estudiante que elige cursar psicología 
-                                en la universidad más importante de Argentina debe lidiar con la realidad de que mientras que …</div>
+                                en la universidad más importante de Argentina debe lidiar con la realidad de que mientras que …
+                            </div>
                         </div>
                     </a>
                 </div>
