--- a/que-estudiamos.html
+++ b/que-estudiamos.html
@@ -99,12 +99,12 @@
                     </svg>
                 </a>
             </div>
-            <ul class="nav-ul" id="nav">
-                <li class="link"><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
-                <li class="link"><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
-                <li class="link"><a href="./documentos.html">Documentos</a></li>
-                <li class="link"><a href="./recursos.html">Recursos</a></li>
-                <li class="link"><a href="./contacto.html">Contacto</a></li>
+            <ul class="nav-ul">
+                <li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
+                <li><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
+                <li><a href="./documentos.html">Documentos</a></li>
+                <li><a href="./recursos.html">Recursos</a></li>
+                <li><a href="./contacto.html">Contacto</a></li>
             </ul>
             <div class="nav-btn">
                 <div class="line-1"></div>
