more javascript added

--- a/documentos.html
+++ b/documentos.html
@@ -118,42 +118,42 @@
         <div class="secondary-nav">
             <header><input type="text" id="search" onkeyup="myFunction()" placeholder="Buscar..."></header>
         </div>
-        <div class="ul-container">
+        <div class="ul-container" id="nav">
             <ul>
-                <li class="hvr-sweep-to-top">
+                <li class="hvr-sweep-to-top link active">
                     <a class="nav-link" href="#departamentos"><h1><i class="fas fa-book pr-1"></i> Departamentos</h1></a>
                 </li>
-                <li class="hvr-sweep-to-top">
+                <li class="hvr-sweep-to-top link">
                     <a class="nav-link" href="#delegados">Delegados</a>
                 </li>
-                <li class="hvr-sweep-to-top">
+                <li class="hvr-sweep-to-top link">
                     <a class="nav-link" href="#diseno">Diseño</a>
                 </li>
-                <li class="hvr-sweep-to-top">
+                <li class="hvr-sweep-to-top link">
                     <a class="nav-link" href="#divulgacion">Divulgación</a>
                 </li>
-                <li class="hvr-sweep-to-top">
+                <li class="hvr-sweep-to-top link">
                     <a class="nav-link" href="#recursos-humanos">Recursos Humanos</a>
                 </li>
-                <li class="hvr-sweep-to-top">
+                <li class="hvr-sweep-to-top link">
                     <a class="nav-link" href="#relaciones-publicas">Relaciones Públicas</a>
                 </li>
-                <li class="hvr-sweep-to-top">
+                <li class="hvr-sweep-to-top link">
                     <a class="nav-link" href="#revision">Revisión</a>
                 </li>
-                <li class="hvr-sweep-to-top">
+                <li class="hvr-sweep-to-top link">
                     <a class="nav-link" href="#departamentos"><h1><i class="fas fa-book-reader pr-1"></i> Áreas</h1></a>
                 </li>
-                <li class="hvr-sweep-to-top">
+                <li class="hvr-sweep-to-top link">
                     <a class="nav-link" href="#revision">Facebook</a>
                 </li>
-                <li class="hvr-sweep-to-top">
+                <li class="hvr-sweep-to-top link">
                     <a class="nav-link" href="#revision">Twitter</a>
                 </li>
-                <li class="hvr-sweep-to-top">
+                <li class="hvr-sweep-to-top link">
                     <a class="nav-link" href="#revision">YouTube</a>
                 </li>
-                <li class="hvr-sweep-to-top">
+                <li class="hvr-sweep-to-top link">
                     <a class="nav-link" href="#revision">Instagram</a>
                 </li>
             </ul>
