remove line-height & hero.png

--- a/index.html
+++ b/index.html
@@ -124,9 +124,9 @@
                     integrantes en temas afines y reclamar por<br> una formación
                     actualizada, plural y científica.</h2>
             </div>
-            <div class="hero-image">
+            <!--<div class="hero-image">
                 <img src="./img/hero.png" alt="Logo de portada MEPC">
-            </div>
+            </div>-->
         </div>
     </section>
 
