--- a/contacto.html
+++ b/contacto.html
@@ -144,7 +144,7 @@
             </div>
             <div class="feature">
                 <i class="feature-icon fab fa-instagram fa-2x"></i>
-                <h2 class="feature-title">Facebook</h2>
+                <h2 class="feature-title">Instagram</h2>
                 <p class="feature-description">
                     <a href="https://www.instagram.com/mepc.oficial/">Cuenta oficial</a>
                 </p>
