update page design

--- a/documentos.html
+++ b/documentos.html
@@ -99,11 +99,11 @@
                 </a>
             </div>
             <ul class="nav-ul">
-                <li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
+                <!--<li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>-->
                 <li><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
                 <li><a href="./documentos.html">Documentos</a></li>
                 <li><a href="./recursos.html">Recursos</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
+                <!--<li><a href="./contacto.html">Contacto</a></li>-->
             </ul>
             <div class="nav-btn">
                 <div class="line-1"></div>
