--- a/index.html
+++ b/index.html
@@ -36,11 +36,11 @@
     <header class="main-header">
         <nav class="navbar">
             <ul class="nav-ul">
-                <li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>
+                <!--<li><a href="./como-colaborar.html">¿Cómo colaborar?</a></li>-->
                 <li><a href="./que-estudiamos.html">¿Qué estudiamos?</a></li>
                 <li><a href="./documentos.html">Documentos</a></li>
                 <li><a href="./recursos.html">Recursos</a></li>
-                <li><a href="./contacto.html">Contacto</a></li>
+                <!--<li><a href="./contacto.html">Contacto</a></li>-->
             </ul>
             <div class="nav-btn">
                 <div class="line-1"></div>
@@ -110,6 +110,136 @@
                 </div>
             </div>
         </div>
+    </section>
+
+    <!-- Features -->
+    <section class="titles">
+        <h1>¿Cómo colaborar?</h1> 
+        <hr>
+    </section>
+    <section class="features-section">
+        <div class="feature">
+            <i class="feature-icon"><img src="./img/equipo.png" alt="Logo de Unite a nuestro equipo"></i>
+            <h2 class="feature-title">Unite a nuestro equipo</h2>
+            <p class="feature-description">Podés unirte a nuestros departamentos <a href="./contacto.html">enviándonos un mail</a>. 
+                También podés colaborar con el sitio web a través de <a href="https://github.com/francosbenitez/mepc">Github</a>.</p>
+        </div>
+        <div class="feature">
+            <i class="feature-icon"><img src="./img/corre-la-voz.png" alt="Logo de Corré la voz"></i>
+            <h2 class="feature-title">Corré la voz</h2>
+            <p class="feature-description">Una mejor educación es para todes. Ayudanos a correr la voz siguiéndonos y compartiendo 
+                nuestros contenidos en <a href="https://twitter.com/MEPC_oficial">Twitter</a>, 
+                <a href="https://www.youtube.com/channel/UCJpN1ANkID-67MQ2alMek-g">YouTube</a>, 
+                <a href="https://www.facebook.com/mepc.oficial/">Facebook</a>, 
+                <a href="https://www.instagram.com/mepc.oficial/">Instagram</a> y otras redes sociales.</p>
+        </div>
+        <div class="feature">
+            <i class="feature-icon"><img src="./img/grupos-de-estudio.png" alt="Logo de Unite a nuestros grupos de estudio"></i>
+            <h2 class="feature-title">Unite a nuestros grupos de estudio</h2>
+            <p class="feature-description">Contamos con <a href="./que-estudiamos.html">nueve grupos de estudio</a>
+                 sobre diferentes temas relacionados a la psicología científica. 
+                ¡Sumándote a ellos podremos compartir y aprender en conjunto!</p>
+        </div>
+    </section>
+    <section class="features-section">
+        <div class="feature">
+            <i class="feature-icon fab fa-whatsapp fa-2x"></i>
+            <h2 class="feature-title">Unite a nuestros grupos de WhatsApp</h2>
+            <p class="feature-description">Contamos con dos grupos de WhatsApp (<a href="https://chat.whatsapp.com/LXTB9dRdP2z0d8meLKz1eg">grupo 1</a> 
+                y <a href="https://chat.whatsapp.com/LWqNQwz5UxhJIJwrArgJ3E">grupo 2</a>) 
+                para mantenernos actualizados sobre novedades en psicología científica.</>
+        </div>
+        <div class="feature">
+            <i class="feature-icon fab fa-facebook fa-2x"></i>
+            <h2 class="feature-title">Unite a nuestro grupo de Facebook</h2>
+            <p class="feature-description">Contamos con un <a href="https://www.facebook.com/groups/2641583789449049">grupo de Facebook</a>
+                 con más de 3000 miembros 
+                entusiastas de la psicología científica.</p>
+        </div>
+    </section>
+
+    <!-- Contact -->
+    <section class="contact">
+        <section class="titles">
+            <h1>Contacto</h1> 
+            <hr>
+            <!-- <div class="alert-note-right">
+                ¡Si tenés alguna consulta o querés saber más del Movimiento, envianos un mensaje!
+            </div>-->
+        </section>
+        <section class="features-section">
+            <div class="feature">
+                <i class="feature-icon fab fa-whatsapp fa-2x"></i>
+                <h2 class="feature-title">WhatsApp</h2>
+                <p class="feature-description">
+                    <a href="https://chat.whatsapp.com/LXTB9dRdP2z0d8meLKz1eg">Grupo oficial 1</a> 
+                    <br>
+                    <a href="https://chat.whatsapp.com/LWqNQwz5UxhJIJwrArgJ3E">Grupo oficial 2</a>
+                </p>
+            </div>
+            <div class="feature">
+                <i class="feature-icon fab fa-facebook fa-2x"></i>
+                <h2 class="feature-title">Facebook</h2>
+                <p class="feature-description">
+                    <a href="https://www.facebook.com/groups/2641583789449049">Grupo oficial</a>
+                    <br>
+                    <a href="https://www.facebook.com/mepc.oficial/">Página oficial</a>
+                </p>
+            </div>
+            <div class="feature">
+                <i class="feature-icon fab fa-instagram fa-2x"></i>
+                <h2 class="feature-title">Instagram</h2>
+                <p class="feature-description">
+                    <a href="https://www.instagram.com/mepc.oficial/">Cuenta oficial</a>
+                </p>
+            </div>
+        </section>
+        <section class="features-section">
+            <div class="feature">
+                <i class="feature-icon fab fa-youtube fa-2x"></i>
+                <h2 class="feature-title">Youtube</h2>
+                <p class="feature-description">
+                    <a href="https://www.youtube.com/channel/UCJpN1ANkID-67MQ2alMek-g">Cuenta oficial</a> 
+                </p>
+            </div>
+            <div class="feature">
+                <i class="feature-icon fas fa-envelope fa-2x"></i>
+                <h2 class="feature-title">Email</h2>
+                <p class="feature-description">
+                    <a href="mailto:mepc.org@gmail.com">mepc.org@gmail.com</a>
+                </p>
+            </div>
+            <div class="feature">
+                <i class="feature-icon fab fa-twitter fa-2x"></i>
+                <h2 class="feature-title">Twitter</h2>
+                <p class="feature-description">
+                    <a href="https://twitter.com/MEPC_oficial">Cuenta oficial</a>
+                </p>
+            </div>
+        </section>
+        <br>
+        <section class="section-form">
+            <div class="form">
+                <form class="form-wrapper" name="contact" method="POST" action="https://formspree.io/f/mleadzdo">
+                    <div class="form-image">
+                        <img src="./img/contacto.png" alt="Ilustración">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="inputName">Nombre</label>
+                        <input type="text" name="name" class="form-control" id="inputName" placeholder="Nombre" required="">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="inputEmail">Email</label>
+                        <input type="email" name="email" class="form-control" id="inputEmail" placeholder="Email" required="">
+                    </div>
+                    <div class="form-group">
+                        <label class="sr-only" for="inputMessage">Mensaje</label>
+                        <textarea name="message" class="form-control" id="inputMessage" rows="5" placeholder="Mensaje" required=""></textarea>
+                    </div>
+                    <button type="submit" class="submit-btn">Enviar</button>
+                </form>
+            </div>
+        </section>
     </section>
 
     <!-- Footer -->
