--- a/recursos.html
+++ b/recursos.html
@@ -126,7 +126,7 @@
                 <a href="https://docs.google.com/forms/u/2/d/e/1FAIpQLSeu8qfWfBGWc1XtMdc21my_0OazVdG3iaGdgtAhNynSKYzTBA/viewform?usp=send_form">
                     este formulario</a>.
             </div>
-            <br>
+            <input type="text" class="search-input" onkeyup="myFunction()" placeholder="">
         </section>
         <section class="resources-section">
             <div class="resources-wrapper">
@@ -175,8 +175,6 @@
 
     <!-- JavaScript -->
     <script src="js/navbar.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.1/dist/umd/popper.min.js" integrity="sha384-SR1sx49pcuLnqZUnnPwx6FCym0wLsk5JZuNx2bPPENzswTNFaQU1RDvt3wT4gWFG" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/js/bootstrap.min.js" integrity="sha384-j0CNLUeiqtyaRmlzUHCPZ+Gy5fQu0dQ6eZ/xAww941Ai1SxSY+0EQqNXNE6DZiVc" crossorigin="anonymous"></script>
 </body>
 
 </html>
