improve search in recursos.html & navbar style

--- a/recursos.html
+++ b/recursos.html
@@ -126,7 +126,7 @@
                 <a href="https://docs.google.com/forms/u/2/d/e/1FAIpQLSeu8qfWfBGWc1XtMdc21my_0OazVdG3iaGdgtAhNynSKYzTBA/viewform?usp=send_form">
                     este formulario</a>.
             </div>
-            <input type="text" class="search-input" onkeyup="myFunction()" placeholder="">
+            <input type="text" class="search-input" onkeyup="myFunction()" placeholder=" Ingresá texto de búsqueda">
         </section>
         <section class="resources-section">
             <div class="resources-wrapper">
