change h3 for p in group avatars

--- a/que-estudiamos.html
+++ b/que-estudiamos.html
@@ -131,7 +131,7 @@
             <div class="column">
                 <a href="#"><img class="group-avatar" src="./img/aba.png" alt="Avatar Análisis Conductual Aplicado"></a>
                 <div class="avatar-title">
-                <h3><a href="#">Análisis Conductual Aplicado</a></h3> 
+                <p><a href="#">Análisis Conductual Aplicado</a></p> 
                     <ul class="network-icon" aria-hidden="true">
                         <li>
                             <a href="mailto:abaenpsicouba.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
@@ -142,7 +142,7 @@
             <div class="column">
                 <a href="#"><img class="group-avatar" src="./img/ciencias-cognitivas.png" alt="Avatar Ciencias Cognitivas"></a>
                 <div class="avatar-title">
-                <h3><a href="#">Ciencias Cognitivas</a></h3> 
+                <p><a href="#">Ciencias Cognitivas</a></p> 
                     <ul class="network-icon" aria-hidden="true">
                         <li>
                             <a href="mailto:cs.cognitivas.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
@@ -153,7 +153,7 @@
             <div class="column">
                 <a href="#"><img class="group-avatar" src="./img/clinica.png" alt="Avatar Clínica"></a>
                 <div class="avatar-title">
-                <h3><a href="#">Clínica</a></h3> 
+                <p><a href="#">Clínica</a></p> 
                     <ul class="network-icon" aria-hidden="true">
                         <li>
                             <a href="mailto:cs.cognitivas.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
@@ -164,7 +164,7 @@
             <div class="column">
                 <a href="#"><img class="group-avatar" src="./img/evolutiva.png" alt="Avatar Evolutiva"></a>
                 <div class="avatar-title">
-                <h3><a href="#">Evolutiva</a></h3> 
+                <p><a href="#">Evolutiva</a></p> 
                     <ul class="network-icon" aria-hidden="true">
                         <li>
                             <a href="mailto:cs.cognitivas.mepc@gmail.com"><i class="fas fa-envelope"></i></a>
