--- a/index.html
+++ b/index.html
@@ -158,14 +158,34 @@
         </div>
     </section>
 
+
+    <!-- FAQ -->
+    <section class="faq">
+        <div class="faq-titles">
+            <h1>Preguntas frecuentes</h1> 
+            <hr>
+        </div>
+        <div class="faq-questions">
+            <h3>1) ¿Hay que pagar para pertenecer a los grupos de estudio?</h3>
+            <p>No, no hay que pagar para sumarse a los grupos de estudio. Son totalmente gratuitos.</p>
+            <h3>2) ¿Cómo puedo sumarme a los grupos de estudio?</h3>
+            <p>Enviando un mail al grupo de estudio en el cual te encuentres interesade</p>
+            <h3>3) ¿Cómo puedo sumarme a un departamento y/o área de MEPC?</h3>
+            <P>Enviando un mail al departamento y/o área que te resulte de interés.</P>
+            <h3>4) ¿Cuál es el objetivo de MEPC?</h3>
+            <p>Principalmente, luchar por una mejora de la formación en psicología en Argentina.</p>
+        </div>
+    </section>
+
     <!-- Contact -->
     <section class="contact">
         <section class="titles">
             <h1>Contacto</h1> 
             <hr>
-            <!-- <div class="alert-note-right">
-                ¡Si tenés alguna consulta o querés saber más del Movimiento, envianos un mensaje!
-            </div>-->
+            <div class="alert-note">
+                ¡Seguinos en nuestras redes y/o unite a nuestros grupos y compartí con otres miles de entusiastas
+                de la psicología científica!
+            </div>
         </section>
         <section class="features-section">
             <div class="feature">
