--- a/index.html
+++ b/index.html
@@ -182,7 +182,7 @@
         <section class="titles">
             <h1>Contacto</h1> 
             <hr>
-            <div class="alert-note">
+            <div class="alert-note-top">
                 ¡Seguinos en nuestras redes y/o unite a nuestros grupos y compartí con otres miles de entusiastas
                 de la psicología científica!
             </div>
