--- a/index.html
+++ b/index.html
@@ -183,7 +183,7 @@
             <h1>Contacto</h1> 
             <hr>
             <div class="alert-note-top">
-                ¡Seguinos en nuestras redes y/o unite a nuestros grupos y compartí con otres miles de entusiastas
+                ¡Seguinos en nuestras redes y/o unite a nuestros grupos para compartir con otres miles de entusiastas
                 de la psicología científica!
             </div>
         </section>
