--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
         <hr>
     </section>
 
-    <section class="features-section">
+    <section class="features-section-asd">
         <div class="container-feature">
             <div class="avatar">
                 <div class="avatar-image">
@@ -139,7 +139,7 @@
         </div>
     </section>
 
-    <section class="features-section">
+    <section class="features-section-asd">
         
         <div class="container-description">
             <div class="asd">
@@ -162,7 +162,7 @@
 
     
 
-    <section class="features-section">
+    <section class="features-section-asd">
         <div class="container-feature">
             <div class="avatar">
                 <div class="avatar-image">
