--- a/index.html
+++ b/index.html
@@ -232,7 +232,7 @@
     <!-- FAQ -->
     <section class="faq">
         <div class="faq-titles">
-            <h1>Preguntas frecuentes</h1> 
+            <h1>Preguntas frecuentes <i class="fa fa-eye" aria-hidden="true"></i></h1> 
             <hr>
         </div>
         <div class="faq-questions">
@@ -240,7 +240,7 @@
                 <li>
                     <button class="btn-outline-success">
                         <h2>
-                            ¿Cuál es el objetivo de MEPC?
+                            ¿Cuál es el objetivo de MEPC? 
                         </h2>
                     </button>
                     <div>
