--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <meta property="og:image" content="https://francosbenitez.github.io/mepc/img/social.png">
 
     <!-- Title -->
-    <title>Movimiento Estudiantil por la Psicología Científica - MEPC</title>
+    <title>Home | Movimiento Estudiantil por la Psicología Científica (MEPC)</title>
 
     <!-- Favicon -->
     <link rel="apple-touch-icon" sizes="180x180" href="favicon_io/apple-touch-icon.png">
