upload slider.js & change home imgs!

--- a/index.html
+++ b/index.html
@@ -122,7 +122,7 @@
         <div class="container-feature">
             <div class="avatar">
                 <div class="avatar-image">
-                    <img src="./img/corre-la-voz.png" alt="Avatar MEPC">
+                    <img src="./img/speaker.svg" alt="Avatar MEPC">
                 </div>
             </div>
         </div>
@@ -143,7 +143,7 @@
         <div class="container-feature">
             <div class="avatar">
                 <div class="avatar-image">
-                    <img src="./img/equipo.png" alt="Avatar MEPC">
+                    <img src="./img/remote-team.svg" alt="Avatar MEPC">
                 </div>
             </div>
             
@@ -166,7 +166,7 @@
         <div class="container-feature">
             <div class="avatar">
                 <div class="avatar-image">
-                    <img src="./img/grupos-de-estudio.png" alt="Avatar MEPC">
+                    <img src="./img/studying.svg" alt="Avatar MEPC">
                 </div>
             </div>
             
