change contacto.png for svg

--- a/index.html
+++ b/index.html
@@ -351,7 +351,7 @@
             <div class="form">
                 <form class="form-wrapper" name="contact" method="POST" action="https://formspree.io/f/mleadzdo">
                     <div class="form-image">
-                        <img src="./img/contacto.png" alt="Ilustración">
+                        <img src="./img/contacto.svg" alt="Ilustración">
                     </div>
                     <div class="form-group">
                         <label class="sr-only" for="inputName">Nombre</label>
