--- a/index.html
+++ b/index.html
@@ -60,9 +60,9 @@
                     integrantes en temas afines y reclamar por<br> una formación
                     actualizada, plural y científica.</h2>
             </div>
-            <!--<div class="hero-image">
-                <img src="./img/hero.png" alt="Logo de portada MEPC">
-            </div>-->
+            <div class="hero-image">
+                <img src="./img/hero.svg" alt="Logo de portada MEPC">
+            </div>
         </div>
     </section>
 
