--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
                     actualizada, plural y científica.</h2>
             </div>
             <div class="hero-image">
-                <img src="./img/hero.svg" alt="Logo de portada MEPC">
+                <img src="./img/hero.svg" alt="Logo de portada de MEPC">
             </div>
         </div>
     </section>
