clean slider.js

--- a/index.html
+++ b/index.html
@@ -178,13 +178,13 @@
             <h1>Destacados <i class='fas fa-highlighter'></i></h1> 
             <hr>
         </div>
-        <div class="blog-slider__container">
-            <div class="blogSlides fade">
+        <div class="blog-slider-container">
+            <div class="blog-slides fade">
                 <div class="blog-slider__numbertext">1 / 2</div>
                 <img src="./img/programacion-mepc.png">
                 <!--<div class="blog-slider__text"></div>-->
             </div>
-            <div class="blogSlides fade">
+            <div class="blog-slides fade">
                 <div class="blog-slider__numbertext">2 / 2</div>
                 <img src="./img/investigacion-mepc.png">
                 <!--<div class="blog-slider__text"></div>-->
@@ -193,9 +193,9 @@
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
         </div>
         <br>
-        <div class="blogSlider__dots" style="text-align:center">
-            <span class="blogSlider__dots--dot" onclick="currentSlide(1)"></span> 
-            <span class="blogSlider__dots--dot" onclick="currentSlide(2)"></span> 
+        <div class="blog-slider-dots" style="text-align:center">
+            <span class="blog-slider-dots-dot" onclick="currentSlide(1)"></span> 
+            <span class="blog-slider-dots-dot" onclick="currentSlide(2)"></span> 
             <!--<span class="blogSlider__dots--dot" onclick="currentSlide(3)"></span> -->
         </div>
     </section>
