improve slider.js

--- a/index.html
+++ b/index.html
@@ -180,14 +180,14 @@
         </div>
         <div class="blog-slider-container">
             <div class="blog-slides fade">
-                <div class="blog-slider__numbertext">1 / 2</div>
+                <div class="blog-slider-numbertext">1 / 2</div>
                 <img src="./img/programacion-mepc.png">
-                <!--<div class="blog-slider__text"></div>-->
+                <!--<div class="blog-slider-text"></div>-->
             </div>
             <div class="blog-slides fade">
-                <div class="blog-slider__numbertext">2 / 2</div>
+                <div class="blog-slider-numbertext">2 / 2</div>
                 <img src="./img/investigacion-mepc.png">
-                <!--<div class="blog-slider__text"></div>-->
+                <!--<div class="blog-slider-text"></div>-->
             </div>
             <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
             <a class="next" onclick="plusSlides(1)">&#10095;</a>
@@ -196,7 +196,7 @@
         <div class="blog-slider-dots" style="text-align:center">
             <span class="blog-slider-dots-dot" onclick="currentSlide(1)"></span> 
             <span class="blog-slider-dots-dot" onclick="currentSlide(2)"></span> 
-            <!--<span class="blogSlider__dots--dot" onclick="currentSlide(3)"></span> -->
+            <!--<span class="blog-slider-dots-dot" onclick="currentSlide(3)"></span> -->
         </div>
     </section>
 
